fixed description spacing & size

--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ button {
 }
 
 .des-spacing {
-    margin-block: 3rem;
+    margin-block: 1rem;
     display: flex;
     justify-content: center;
 }
@@ -251,7 +251,7 @@ button {
 #channel-description p{
     font-family: var(--sans-serif);
     color: var(--color);
-    font-size: calc(var(--body-copy)*1.1);
+    font-size: calc(var(--body-copy)*1.2);
     max-width: 35ch;
     text-align: center;
 }
